PRUEBAS/PRUEBA0/y.output
Gramática

    0 $accept: str1 $end

    1 str1: str2 nl

    2 str2: CERO str2 UNO
    3     | CERO UNO

    4 nl: NL


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    UNO (258) 2 3
    CERO (259) 2 3
    NL (260) 4


No terminales con las reglas donde aparecen

    $accept (6)
        on left: 0
    str1 (7)
        on left: 1
        on right: 0
    str2 (8)
        on left: 2 3
        on right: 1 2
    nl (9)
        on left: 4
        on right: 1


Estado 0

    0 $accept: . str1 $end

    CERO  desplazar e ir al estado 1

    str1  ir al estado 2
    str2  ir al estado 3


Estado 1

    2 str2: CERO . str2 UNO
    3     | CERO . UNO

    UNO   desplazar e ir al estado 4
    CERO  desplazar e ir al estado 1

    str2  ir al estado 5


Estado 2

    0 $accept: str1 . $end

    $end  desplazar e ir al estado 6


Estado 3

    1 str1: str2 . nl

    NL  desplazar e ir al estado 7

    nl  ir al estado 8


Estado 4

    3 str2: CERO UNO .

    $default  reduce usando la regla 3 (str2)


Estado 5

    2 str2: CERO str2 . UNO

    UNO  desplazar e ir al estado 9


Estado 6

    0 $accept: str1 $end .

    $default  aceptar


Estado 7

    4 nl: NL .

    $default  reduce usando la regla 4 (nl)


Estado 8

    1 str1: str2 nl .

    $default  reduce usando la regla 1 (str1)


Estado 9

    2 str2: CERO str2 UNO .

    $default  reduce usando la regla 2 (str2)
